--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,127 +1,52 @@
-<style type="text/css">
-    .story img {
-        float: left;
-        /*padding: 10px;*/
-        margin: 10px;
-        border: black;
-        /*box-shadow: 0 0 20px 10px rgba(0,0,0,1);*/
-        /*-moz-box-shadow: 0 0 20px 10px rgba(0,0,0,1);*/
-        /*-webkit-box-shadow: 0 0 20px 10px rgba(0,0,0,1);*/
+<!-- Describe task in general -->
 
-    }
-</style>
-<div class="story" style="margin-bottom: 15px">
-    <img src="{{MEDIA}}alice-puppy-sepia.png" width="320px"/>
-</div>
-<div class="story" style="text-indent: 20px; padding-left: 20px;">
-    <p>An enormous puppy was looking down at her with large round
-        eyes, and feebly stretching out one paw, trying to touch her.
-        "Poor little thing!" said Alice, in a coaxing tone, and she tried
-        hard to whistle to it; but she was terribly frightened all the
-        time at the thought that it might be hungry, in which case it
-        would be very likely to eat her up in spite of all her coaxing.
-    </p>
-
-    <p>Hardly knowing what she did, she picked up a little bit of
-        stick, and held it out to the puppy; whereupon the puppy jumped
-        into the air off all its feet at once, with a yelp of delight,
-        and rushed at the stick, and made believe to worry it; then Alice
-        dodged behind a great thistle, to keep herself from being run
-        over; and the moment she appeared on the other side, the puppy
-        made another rush at the stick, and tumbled head over heels in
-        its hurry to get hold of it; then Alice, thinking it was very
-        like having a game of play with a cart-horse, and expecting every
-        moment to be trampled under its feet, ran round the thistle
-        again; then the puppy began a series of short charges at the
-        stick, running a very little way forwards each time and a long
-        way back, and barking hoarsely all the while, till at last it sat
-        down a good way off, panting, with its tongue hanging out of its
-        mouth, and its great eyes half shut.</p>
-
-    <p style="float: right">
-        "Alice's Adventures in Wonderland." Lewis Carroll
-    </p>
-
-    <p style="clear: both;"></p>
-
-    <p style="text-indent: 0; text-align: center;">
-        A stick I found that weighed two pound:<br>
-        I sawed it up one day<br>
-        In pieces eight of equal weight!<br>
-        How much did each piece weigh?<br>
-        (Everybody says “a quarter of a pound”, which is wrong.)
-    </p>
-
-    <p style="float: right">
-        "Puzzles from Wonderland." Lewis Carroll
-    </p>
-
-</div>
 <p>
-    The robots want to saw the stick in several pieces. The length of the stick is <strong>N</strong> inches.
-    We should help our robots saw the stick. All of the parts should have integer lengths (1, 2, 3 .. inches, but not
-    1.2).
-    As we love the numerical series and especially the Triangular numbers
-    (<a href="http://en.wikipedia.org/wiki/Triangular_number">read more about Triangular numbers on Wikipedia</a>),
-    you should saw the stick so that the lengths form the consecutive fragment of the Triangular numbers series
-    with the maximum quantity (fragment's length).
-    The parts should have different lengths (no repeating).
-    For example: <strong>64</strong> should divided at <strong>15, 21, 28</strong>,
-    because <strong>28, 36</strong> is shorter and <strong>1, 3, 15, 45</strong> is not a consecutive fragment.
+As the input you will get the date of the first day of the vacation in the format 'YYYY-MM-DD' and the number of days of the vacation. Your task is to find out which day will be the first working day after the vacation. If it will be Saturday or Sunday then it should be the next Monday.<br>
+In this mission you should ignore the national holidays and consider only Saturdays and Sundays.<br>
+Also don't forget about February 29th in the leap year and about the situation when the start of the vacation is at the end of the December of the one year and the end of it is at the beginning of the next year.
+</p>
+
+<!-- Explain input and output values -->
+<p>
+    <strong>Input: </strong> First day of the vacation and number of days of it.
 </p>
 
 <p>
-    You are given a length of the stick (N).
-    You should return the list of lengths (integers) for the parts in ascending order.
-    If it's not possible and the problem does not have a solution, then you should return an empty list.
-</p>
-
-<p style="text-align: center;">
-    <img class="for_info_only" title="sawing" src="{{MEDIA}}sawing.png" alt="sawing" width="440"/>
-    <img class="for_editor_only" title="sawing" src="{{MEDIA}}sawing.png" alt="sawing" width="380px"/>
-</p>
-
-<p>
-    <strong>Input: </strong> A length of the stick as an integer.
-</p>
-
-<p>
-    <strong>Output: </strong> A fragment of the Triangular numbers as a list of integers (sorted in ascending order) or an empty list.
+    <strong>Output: </strong> Date of the first working day.
 </p>
 
 
+<!-- Put some usage examples -->
 <div class="for_info_only">
-    <p>
-        <strong>Example:</strong>
-    </p>
+<p>
+<strong>Example:</strong>
+</p>
 {% if interpreter.slug == "js-node" %}
 <pre class="brush: javascript">
-stick(64) == [15, 21, 28]
-stick(371) == [36, 45, 55, 66, 78, 91]
-stick(225) == [105, 120]
-stick(882) == []</pre>
+vacation('2018-07-01', 14) == '2018-07-16'
+vacation('2018-02-19', 10) == '2018-03-01'
+vacation('2000-02-28', 5) == '2000-03-06'
+vacation('1999-12-20', 14) == '2000-01-03'
+</pre>
 {% else %}
 <pre class="brush: python">
-stick(64) == [15, 21, 28]
-stick(371) == [36, 45, 55, 66, 78, 91]
-stick(225) == [105, 120]
-stick(882) == []</pre>
+vacation('2018-07-01', 14) == '2018-07-16'
+vacation('2018-02-19', 10) == '2018-03-01'
+vacation('2000-02-28', 5) == '2000-03-06'
+vacation('1999-12-20', 14) == '2000-01-03'
+</pre>
 {% endif %}
 </div>
 
+<!-- Here you can explain how it can be used in development and what is usage of this. -->
+<!-- The section is optional -->
 <p class="for_info_only">
     <strong>How it is used: </strong>
-    In this task you will learn about triangular numbers.
-    A triangular number or triangle number counts the objects that form an equilateral triangle.
-    This is an interesting sequence which has various applications.<br>
-
-    Here’s a real world application:
-    In a competitive tournament format that uses a round-robin group stages,
-    the number of matches that need to be played between n teams is equal to the triangular number T<sub>n−1</sub>.
-    For example, a group stage with 4 teams requires 6 matches, and a group stage with 8 teams requires 28 matches.
-
+    For the work with dates and planning a time.
 </p>
 
-<p>
-    <strong>Precondition:</strong> 0 < length < 1000
+<!-- Here you can explain some constraints for input-->
+<!-- The section is optional -->
+<p><strong>Precondition</strong>:<br>
+    1900 <= year <= 2100
 </p>
