--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,18 +1,18 @@
 <!-- Describe task in general -->
 
 <p>
-As the input you will get the date of the first day of the vacation in the format 'YYYY-MM-DD' and the number of days of the vacation. Your task is to find out which day will be the first working day after the vacation. If it will be Saturday or Sunday then it should be the next Monday.<br>
-In this mission you should ignore the national holidays and consider only Saturdays and Sundays.<br>
-Also don't forget about February 29th in the leap year and about the situation when the start of the vacation is at the end of the December of the one year and the end of it is at the beginning of the next year.
+As the input you’ll get the date of the first vacation day in the format 'YYYY-MM-DD' and the total number of vacation days. Your task is to find out which day will be the first working day after the vacation. If it’ll be Saturday or Sunday then it should be the next Monday.<br>
+In this mission you have to ignore national holidays and consider only Saturdays and Sundays.<br>
+Also don't forget about February 29th in the leap year and the situation when the vacation starts at the end of December of the one year and ends at the beginning of the next year.
 </p>
 
 <!-- Explain input and output values -->
 <p>
-    <strong>Input: </strong> First day of the vacation and number of days of it.
+    <strong>Input: </strong> The first day of the vacation and the number of days in it.
 </p>
 
 <p>
-    <strong>Output: </strong> Date of the first working day.
+    <strong>Output: </strong> The date of the first working day.
 </p>
 
 
@@ -42,7 +42,7 @@ vacation('1999-12-20', 14) == '2000-01-03'
 <!-- The section is optional -->
 <p class="for_info_only">
     <strong>How it is used: </strong>
-    For the work with dates and planning a time.
+    To work with dates and for time planning.
 </p>
 
 <!-- Here you can explain some constraints for input-->
@@ -50,3 +50,5 @@ vacation('1999-12-20', 14) == '2000-01-03'
 <p><strong>Precondition</strong>:<br>
     1900 <= year <= 2100
 </p>
+
+
